k8s_manifests/server/vminsert/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vminsert
  name: vminsert
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: vminsert
  replicas: 2
  template:
    metadata:
      labels:
        app: vminsert
    spec:
      automountServiceAccountToken: true
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - vmselect
                topologyKey: topology.kubernetes.io/zone
              weight: 100
      containers:
        - name: vminsert
          image: "victoriametrics/vminsert:v1.95.1-cluster"
          imagePullPolicy: "IfNotPresent"
          securityContext: {}
          args:
            - --storageNode=vmstorage-0.vmstorage.monitoring.svc.cluster.local:8400
            - --storageNode=vmstorage-1.vmstorage.monitoring.svc.cluster.local:8400
            - --replicationFactor=1
            - --envflag.enable=true
            - --envflag.prefix=VM_
            - --loggerFormat=json
            - --maxLabelsPerTimeseries=50
          ports:
            - name: http
              containerPort: 8480
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
          resources: {}
      serviceAccountName: vm
