k8s_manifests/server/vminsert/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vminsert
  name: vminsert
  namespace: monitoring
spec:
  ports:
    - name: http
      port: 8480
      protocol: TCP
      targetPort: http
  selector:
    app: vminsert
  type: "ClusterIP"
